--- a/memorizer/Base.lproj/Main.storyboard
+++ b/memorizer/Base.lproj/Main.storyboard
@@ -39,7 +39,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1098" y="209"/>
+            <point key="canvasLocation" x="1276" y="-69"/>
         </scene>
         <!--Web View Detail-->
         <scene sceneID="Ukm-cN-Wpx">
@@ -66,7 +66,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u4B-ez-eMG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1736" y="209"/>
+            <point key="canvasLocation" x="1919" y="-69"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="1za-z3-JwF">
@@ -85,12 +85,12 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="o5e-5e-mNg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-198" y="209"/>
+            <point key="canvasLocation" x="-202" y="245"/>
         </scene>
         <!--Item-->
         <scene sceneID="veD-P8-OV4">
             <objects>
-                <viewController id="tBy-v5-rxN" sceneMemberID="viewController">
+                <viewController id="tBy-v5-rxN" customClass="CopyDetail" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ksd-8b-Jzt"/>
                         <viewControllerLayoutGuide type="bottom" id="ZeF-69-DT6"/>
@@ -98,13 +98,22 @@
                     <view key="view" contentMode="scaleToFill" id="hmE-n9-DFj">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="1c9-ok-H3S">
+                                <rect key="frame" x="0.0" y="28" width="600" height="523"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="2nO-h7-qmq"/>
+                    <connections>
+                        <outlet property="CopyTableView" destination="1c9-ok-H3S" id="QNZ-cH-cKH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="69W-if-3Tu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-198" y="901"/>
+            <point key="canvasLocation" x="538" y="599"/>
         </scene>
         <!--Item-->
         <scene sceneID="1dO-jv-ozQ">
@@ -123,7 +132,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oad-qb-FMG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="446" y="209"/>
+            <point key="canvasLocation" x="538" y="-69"/>
         </scene>
     </scenes>
 </document>
